--- a/src/app/components/campaign/campaign.component.html
+++ b/src/app/components/campaign/campaign.component.html
@@ -1,16 +1,8 @@
-<div *ngIf="campaignData">
-  <p>Name: {{ campaignData.name }}</p>
-  <p>code: {{ campaignData.code }}</p>
-  <p>email: {{ campaignData.email }}</p>
-  <p>phone: {{ campaignData.phone }}</p>
-  <p>website: {{ campaignData.website }}</p>
-  <p>
-    Events: <br />
-    <ng-container *ngIf="campaignData.events && campaignData.events.length">
-      <section *ngFor="let event of campaignData.events">
-        <p>Event Name: {{ event.name }}</p>
-        <p>Tag line: <span [innerHTML]="event.tagline"></span></p>
-      </section>
-    </ng-container>
-  </p>
+<div *ngIf="isDataLoaded">
+  <p>Name: {{ name }}</p>
+  <p>code: {{ code }}</p>
+  <p>email: {{ email }}</p>
+  <p>phone: {{ phone }}</p>
+  <p>website: {{ website }}</p>
+  <p>uuid: {{ uuid }}</p>
 </div>
